--- a/excercise-checklist.html
+++ b/excercise-checklist.html
@@ -165,7 +165,7 @@
 <li><p>draw a 2D-density plot</p></li>
 </ol></li>
 </ol>
-<p><strong>Part B: price prediction using statistical methods (advanced and motivated beginners)</strong></p>
+<p>** Part B: price prediction using statistical methods (advanced and motivated beginners)</p>
 <ol style="list-style-type: decimal">
 <li><p>Visualize feature correlations in heatmap</p></li>
 <li><p>Regression</p>
