--- a/index.html
+++ b/index.html
@@ -97,20 +97,24 @@
 <li class="chapter" data-level="4.1.2" data-path="exploratory-data-analysis.html"><a href="exploratory-data-analysis.html#days-lineplot"><i class="fa fa-check"></i><b>4.1.2</b> 365 Days Lineplot</a></li>
 </ul></li>
 <li class="chapter" data-level="4.2" data-path="exploratory-data-analysis.html"><a href="exploratory-data-analysis.html#visualize-individual-airbnb-offers-with-the-listings-dataset"><i class="fa fa-check"></i><b>4.2</b> Visualize individual Airbnb offers with the listings dataset</a></li>
-<li class="chapter" data-level="4.3" data-path="exploratory-data-analysis.html"><a href="exploratory-data-analysis.html#merging-of-listings-and-review-data-set"><i class="fa fa-check"></i><b>4.3</b> Merging of listings and review data set</a><ul>
-<li class="chapter" data-level="4.3.1" data-path="exploratory-data-analysis.html"><a href="exploratory-data-analysis.html#your-first-barplot"><i class="fa fa-check"></i><b>4.3.1</b> Your first Barplot</a></li>
+<li class="chapter" data-level="4.3" data-path="exploratory-data-analysis.html"><a href="exploratory-data-analysis.html#merging-of-listings-and-reviewing-the-data-set"><i class="fa fa-check"></i><b>4.3</b> Merging of Listings and Reviewing the Data Set</a><ul>
+<li class="chapter" data-level="4.3.1" data-path="exploratory-data-analysis.html"><a href="exploratory-data-analysis.html#your-first-barplot"><i class="fa fa-check"></i><b>4.3.1</b> Your First Barplot</a></li>
 </ul></li>
 <li class="chapter" data-level="4.4" data-path="exploratory-data-analysis.html"><a href="exploratory-data-analysis.html#visualization-with-maps"><i class="fa fa-check"></i><b>4.4</b> Visualization with Maps</a></li>
 </ul></li>
-<li class="chapter" data-level="5" data-path="price-prediction-the-application-of-statistical-methods.html"><a href="price-prediction-the-application-of-statistical-methods.html"><i class="fa fa-check"></i><b>5</b> Price Prediction- The application of statistical methods</a><ul>
-<li class="chapter" data-level="5.1" data-path="price-prediction-the-application-of-statistical-methods.html"><a href="price-prediction-the-application-of-statistical-methods.html#examine-the-correlation-between-the-variables-test"><i class="fa fa-check"></i><b>5.1</b> Examine the Correlation Between the Variables (test)</a></li>
-<li class="chapter" data-level="5.2" data-path="price-prediction-the-application-of-statistical-methods.html"><a href="price-prediction-the-application-of-statistical-methods.html#first-predictions-with-simple-regression-models-train"><i class="fa fa-check"></i><b>5.2</b> First Predictions with Simple Regression Models (train)</a></li>
-<li class="chapter" data-level="5.3" data-path="price-prediction-the-application-of-statistical-methods.html"><a href="price-prediction-the-application-of-statistical-methods.html#from-training-to-testing---making-predictions"><i class="fa fa-check"></i><b>5.3</b> From Training to Testing - Making Predictions</a></li>
-<li class="chapter" data-level="5.4" data-path="price-prediction-the-application-of-statistical-methods.html"><a href="price-prediction-the-application-of-statistical-methods.html#apply-advanced-machine-learning-algorithms"><i class="fa fa-check"></i><b>5.4</b> Apply Advanced Machine Learning Algorithms</a></li>
+<li class="chapter" data-level="5" data-path="price-prediction-application-of-statistical-methods.html"><a href="price-prediction-application-of-statistical-methods.html"><i class="fa fa-check"></i><b>5</b> Price Prediction – Application of Statistical Methods</a><ul>
+<li class="chapter" data-level="5.1" data-path="price-prediction-application-of-statistical-methods.html"><a href="price-prediction-application-of-statistical-methods.html#examine-the-correlation-between-the-variables-train"><i class="fa fa-check"></i><b>5.1</b> Examine the Correlation Between the Variables (train)</a></li>
+<li class="chapter" data-level="5.2" data-path="price-prediction-application-of-statistical-methods.html"><a href="price-prediction-application-of-statistical-methods.html#first-predictions-with-simple-regression-models-train"><i class="fa fa-check"></i><b>5.2</b> First Predictions with Simple Regression Models (train)</a></li>
+<li class="chapter" data-level="5.3" data-path="price-prediction-application-of-statistical-methods.html"><a href="price-prediction-application-of-statistical-methods.html#from-training-to-testing-making-predictions"><i class="fa fa-check"></i><b>5.3</b> From Training to Testing – Making Predictions</a></li>
+<li class="chapter" data-level="5.4" data-path="price-prediction-application-of-statistical-methods.html"><a href="price-prediction-application-of-statistical-methods.html#apply-advanced-machine-learning-algorithms"><i class="fa fa-check"></i><b>5.4</b> Apply Advanced Machine Learning Algorithms</a></li>
 </ul></li>
 <li class="chapter" data-level="6" data-path="excercise-checklist.html"><a href="excercise-checklist.html"><i class="fa fa-check"></i><b>6</b> Excercise Checklist</a></li>
 <li class="chapter" data-level="7" data-path="whats-next-in-your-data-science-career.html"><a href="whats-next-in-your-data-science-career.html"><i class="fa fa-check"></i><b>7</b> What’s Next in Your Data Science Career?</a><ul>
-<li class="chapter" data-level="7.1" data-path="whats-next-in-your-data-science-career.html"><a href="whats-next-in-your-data-science-career.html#data-science-in-general"><i class="fa fa-check"></i><b>7.1</b> Data Science in General</a></li>
+<li class="chapter" data-level="7.1" data-path="whats-next-in-your-data-science-career.html"><a href="whats-next-in-your-data-science-career.html#data-science-in-general"><i class="fa fa-check"></i><b>7.1</b> Data Science in General</a><ul>
+<li><a href="whats-next-in-your-data-science-career.html#version-control-with-git">Version Control with <span>Git</span></a></li>
+<li><a href="whats-next-in-your-data-science-career.html#advice-for-non-traditional-data-scientists">Advice for <span>Non-Traditional Data Scientists</span></a></li>
+<li><a href="whats-next-in-your-data-science-career.html#learn-from-great-data-scientists-on-kaggle">Learn from Great Data Scientists on <span>Kaggle</span></a></li>
+</ul></li>
 <li class="chapter" data-level="7.2" data-path="whats-next-in-your-data-science-career.html"><a href="whats-next-in-your-data-science-career.html#r"><i class="fa fa-check"></i><b>7.2</b> R</a></li>
 <li class="chapter" data-level="7.3" data-path="whats-next-in-your-data-science-career.html"><a href="whats-next-in-your-data-science-career.html#python"><i class="fa fa-check"></i><b>7.3</b> Python</a></li>
 </ul></li>
@@ -145,7 +149,7 @@
 <p>In all tracks you will work on your project in small groups of fellow students. This not only helps you get the project done faster, it also helps make your results even better. Our experience shows: The different backgrounds of the members and discussing different opinions and ideas will produce the best results. Besides, it is of course more fun to work on a project together than to code alone!<br />
 The groups can consist of a maximum of three members. You can choose your two teammates independently, we won’t interfere with your arrangements. It is important that all group members complete the same level of difficulty (beginner or advanced), since the tasks are different in scope for each level. We explicitly encourage you to collaborate with students from different departments. This not only allows you to get to know people from other departments, but may even give you a whole new perspective on the project and tasks.
 When submitting it is important to note: for a certificate, each person must submit the project individually. However, this can be identical within your group. You can get more information at our first Coding Meetup on <strong>December 9, 2020</strong>.</p>
-<p>This Airbnb case study and the associated project guide was developed and written entirely from scratch by TechAcademy’s Data Science team. Lukas Jürgensmeier and Lara Zaremba developed the project in <code>R</code>, while Felix Schneider and Manuel Mair am Tinkhof developed it in <code>Python</code>. We would also like to give special thanks to Benjamin Lucht for his extensive input when conceiving this project.</p>
+<p>This Airbnb case study and the associated project guide was developed and written entirely from scratch by TechAcademy’s Data Science team. Lara Zaremba, Lukas Jürgensmeier, and Annalisa Strauß developed the project in <code>R</code>, while Felix Schneider and Manuel Mair am Tinkhof developed it in <code>Python</code>. We would also like to give special thanks to Benjamin Lucht for his extensive input when conceiving this project.</p>
 </div>
             </section>
 
@@ -203,20 +207,6 @@ gitbook.start({
 });
 </script>
 
-<!-- dynamically load mathjax for compatibility with self-contained -->
-<script>
-  (function () {
-    var script = document.createElement("script");
-    script.type = "text/javascript";
-    var src = "true";
-    if (src === "" || src === "true") src = "https://mathjax.rstudio.com/latest/MathJax.js?config=TeX-MML-AM_CHTML";
-    if (location.protocol !== "file:")
-      if (/^https?:/.test(src))
-        src = src.replace(/^https?:/, '');
-    script.src = src;
-    document.getElementsByTagName("head")[0].appendChild(script);
-  })();
-</script>
 </body>
 
 </html>
