--- a/whats-data-science-and-how-do-i-do-it.html
+++ b/whats-data-science-and-how-do-i-do-it.html
@@ -97,20 +97,24 @@
 <li class="chapter" data-level="4.1.2" data-path="exploratory-data-analysis.html"><a href="exploratory-data-analysis.html#days-lineplot"><i class="fa fa-check"></i><b>4.1.2</b> 365 Days Lineplot</a></li>
 </ul></li>
 <li class="chapter" data-level="4.2" data-path="exploratory-data-analysis.html"><a href="exploratory-data-analysis.html#visualize-individual-airbnb-offers-with-the-listings-dataset"><i class="fa fa-check"></i><b>4.2</b> Visualize individual Airbnb offers with the listings dataset</a></li>
-<li class="chapter" data-level="4.3" data-path="exploratory-data-analysis.html"><a href="exploratory-data-analysis.html#merging-of-listings-and-review-data-set"><i class="fa fa-check"></i><b>4.3</b> Merging of listings and review data set</a><ul>
-<li class="chapter" data-level="4.3.1" data-path="exploratory-data-analysis.html"><a href="exploratory-data-analysis.html#your-first-barplot"><i class="fa fa-check"></i><b>4.3.1</b> Your first Barplot</a></li>
+<li class="chapter" data-level="4.3" data-path="exploratory-data-analysis.html"><a href="exploratory-data-analysis.html#merging-of-listings-and-reviewing-the-data-set"><i class="fa fa-check"></i><b>4.3</b> Merging of Listings and Reviewing the Data Set</a><ul>
+<li class="chapter" data-level="4.3.1" data-path="exploratory-data-analysis.html"><a href="exploratory-data-analysis.html#your-first-barplot"><i class="fa fa-check"></i><b>4.3.1</b> Your First Barplot</a></li>
 </ul></li>
 <li class="chapter" data-level="4.4" data-path="exploratory-data-analysis.html"><a href="exploratory-data-analysis.html#visualization-with-maps"><i class="fa fa-check"></i><b>4.4</b> Visualization with Maps</a></li>
 </ul></li>
-<li class="chapter" data-level="5" data-path="price-prediction-the-application-of-statistical-methods.html"><a href="price-prediction-the-application-of-statistical-methods.html"><i class="fa fa-check"></i><b>5</b> Price Prediction- The application of statistical methods</a><ul>
-<li class="chapter" data-level="5.1" data-path="price-prediction-the-application-of-statistical-methods.html"><a href="price-prediction-the-application-of-statistical-methods.html#examine-the-correlation-between-the-variables-test"><i class="fa fa-check"></i><b>5.1</b> Examine the Correlation Between the Variables (test)</a></li>
-<li class="chapter" data-level="5.2" data-path="price-prediction-the-application-of-statistical-methods.html"><a href="price-prediction-the-application-of-statistical-methods.html#first-predictions-with-simple-regression-models-train"><i class="fa fa-check"></i><b>5.2</b> First Predictions with Simple Regression Models (train)</a></li>
-<li class="chapter" data-level="5.3" data-path="price-prediction-the-application-of-statistical-methods.html"><a href="price-prediction-the-application-of-statistical-methods.html#from-training-to-testing---making-predictions"><i class="fa fa-check"></i><b>5.3</b> From Training to Testing - Making Predictions</a></li>
-<li class="chapter" data-level="5.4" data-path="price-prediction-the-application-of-statistical-methods.html"><a href="price-prediction-the-application-of-statistical-methods.html#apply-advanced-machine-learning-algorithms"><i class="fa fa-check"></i><b>5.4</b> Apply Advanced Machine Learning Algorithms</a></li>
+<li class="chapter" data-level="5" data-path="price-prediction-application-of-statistical-methods.html"><a href="price-prediction-application-of-statistical-methods.html"><i class="fa fa-check"></i><b>5</b> Price Prediction – Application of Statistical Methods</a><ul>
+<li class="chapter" data-level="5.1" data-path="price-prediction-application-of-statistical-methods.html"><a href="price-prediction-application-of-statistical-methods.html#examine-the-correlation-between-the-variables-train"><i class="fa fa-check"></i><b>5.1</b> Examine the Correlation Between the Variables (train)</a></li>
+<li class="chapter" data-level="5.2" data-path="price-prediction-application-of-statistical-methods.html"><a href="price-prediction-application-of-statistical-methods.html#first-predictions-with-simple-regression-models-train"><i class="fa fa-check"></i><b>5.2</b> First Predictions with Simple Regression Models (train)</a></li>
+<li class="chapter" data-level="5.3" data-path="price-prediction-application-of-statistical-methods.html"><a href="price-prediction-application-of-statistical-methods.html#from-training-to-testing-making-predictions"><i class="fa fa-check"></i><b>5.3</b> From Training to Testing – Making Predictions</a></li>
+<li class="chapter" data-level="5.4" data-path="price-prediction-application-of-statistical-methods.html"><a href="price-prediction-application-of-statistical-methods.html#apply-advanced-machine-learning-algorithms"><i class="fa fa-check"></i><b>5.4</b> Apply Advanced Machine Learning Algorithms</a></li>
 </ul></li>
 <li class="chapter" data-level="6" data-path="excercise-checklist.html"><a href="excercise-checklist.html"><i class="fa fa-check"></i><b>6</b> Excercise Checklist</a></li>
 <li class="chapter" data-level="7" data-path="whats-next-in-your-data-science-career.html"><a href="whats-next-in-your-data-science-career.html"><i class="fa fa-check"></i><b>7</b> What’s Next in Your Data Science Career?</a><ul>
-<li class="chapter" data-level="7.1" data-path="whats-next-in-your-data-science-career.html"><a href="whats-next-in-your-data-science-career.html#data-science-in-general"><i class="fa fa-check"></i><b>7.1</b> Data Science in General</a></li>
+<li class="chapter" data-level="7.1" data-path="whats-next-in-your-data-science-career.html"><a href="whats-next-in-your-data-science-career.html#data-science-in-general"><i class="fa fa-check"></i><b>7.1</b> Data Science in General</a><ul>
+<li><a href="whats-next-in-your-data-science-career.html#version-control-with-git">Version Control with <span>Git</span></a></li>
+<li><a href="whats-next-in-your-data-science-career.html#advice-for-non-traditional-data-scientists">Advice for <span>Non-Traditional Data Scientists</span></a></li>
+<li><a href="whats-next-in-your-data-science-career.html#learn-from-great-data-scientists-on-kaggle">Learn from Great Data Scientists on <span>Kaggle</span></a></li>
+</ul></li>
 <li class="chapter" data-level="7.2" data-path="whats-next-in-your-data-science-career.html"><a href="whats-next-in-your-data-science-career.html#r"><i class="fa fa-check"></i><b>7.2</b> R</a></li>
 <li class="chapter" data-level="7.3" data-path="whats-next-in-your-data-science-career.html"><a href="whats-next-in-your-data-science-career.html#python"><i class="fa fa-check"></i><b>7.3</b> Python</a></li>
 </ul></li>
@@ -150,7 +154,7 @@ One step is still missing in the data science process: understanding and communi
 <h3><span class="header-section-number">2.1.1</span> RStudio Cloud</h3>
 <p>Before you can use <code>R</code>, you usually have to install some separate programs locally on your computer. Typically, you first install a “raw” version of <code>R</code>. In theory, you can then already start programming. However, it is very difficult to carry out an entire project with it. That’s why there is RStudio, an Integrated Development Environment (IDE) for <code>R</code>. This includes many essential features that simplify programming with <code>R</code>. Among other things, an auto-completion of your code, a nicely structured user interface and many expansion options.</p>
 <p>Experience has shown that installing <code>R</code> and RStudio locally takes some effort. Fortunately, RStudio also has a cloud solution that eliminates these steps: RStudio Cloud. There it is possible to edit your project in exactly the same IDE in the browser without any prior installations. You can also easily switch your project from private to public and give your team an insight into your code via a link or by giving them access to the workspace directly. In this way you are able to easily exchange ideas within your team.</p>
-<p>We will introduce RStudio Cloud and unlock access to our workspace on our first Coding Meetup. Until then, focus on learning the hard skills of programming with your courses on DataCamp. This brings us to your curriculum in the next section.</p>
+<p>We will introduce RStudio Cloud and unlock access to our workspace on our first Coding Meetup. Until then, focus on learning the “hard skills” of programming with your courses on DataCamp. This brings us to your curriculum in the next section.</p>
 </div>
 <div id="curriculum" class="section level3">
 <h3><span class="header-section-number">2.1.2</span> Curriculum</h3>
@@ -214,7 +218,7 @@ Basically, you can use <code>Python</code> to program according to any paradigm,
 <p>One of the easiest ways to get both <code>Python</code> and most of the best known programming libraries is to install Anaconda. There are detailed explanations for the installation on all operating systems on the <a href="https://docs.anaconda.com/anaconda/install/">website</a> of the provider.</p>
 <p>With Anaconda installed, all you have to do is open the Anaconda Navigator and you’re ready to go. There are two ways to get started: Spyder or Jupyter. Spyder is the integrated development environment (IDE) for <code>Python</code> and offers all possibilities from syntax highlighting to debugging (links to tutorials below). The other option is to use Jupyter or Jupyter notebooks. It is an internet technology based interface for executing commands. The big advantage of this is that you can quickly write short code pieces and try them out interactively without writing an entire executable program.
 Now you can get started! If you have not worked with Jupyter before, we recommend that you complete the course on DataCamp (<a href="https://www.datacamp.com/projects/33" class="uri">https://www.datacamp.com/projects/33</a>) first. There you will get to know many tips and tricks that will make your workflow with Jupyter much easier.</p>
-<p>In order to make your work and, above all, the collaboration easier, we are working with the Google Colab platform that contains a Jupyter environment with the necessary libraries. You can then import all the data necessary for the project with Google Drive. We will introduce this environment during our first Coding Meetup. Until then, focus on learning the hard skills of programming with your courses on DataCamp. This brings us to your curriculum in the next section.</p>
+<p>In order to make your work and, above all, the collaboration easier, we are working with the Google Colab platform that contains a Jupyter environment with the necessary libraries. You can then import all the data necessary for the project with Google Drive. We will introduce this environment during our first Coding Meetup. Until then, focus on learning the “hard skills” of programming with your courses on DataCamp. This brings us to your curriculum in the next section.</p>
 </div>
 <div id="curriculum-1" class="section level3">
 <h3><span class="header-section-number">2.2.2</span> Curriculum</h3>
@@ -287,9 +291,8 @@ If you are convinced that this course does not provide any added value for you, 
 <p>Now that you have learned the theoretical foundation in the DataCamp courses, you can put your skills into practice. We have put together a project for you based on real data sets. You can read about the details in the following chapters of this project guide.<br />
 Of course, we will also go into more detail about the project and the tools that go with it. We will discuss everything you need to know during the first Coding Meetup, which will take place on <strong>December 8, 2020</strong>. After that, the work on the project will officially begin.
 You can find the exact project tasks together with further explanations and hints in the following chapters.</p>
-<p>To receive the certificate, it is essential that you have solved at least two thirds of the “Exploratory Data Analysis” part of the project. For the advanced participants, the entire “forecast using statistical models” part is added. In addition, two thirds of the respective curriculum on DataCamp must be completed. You can find more detailed information on this in the “Curriculum” section of the respective programming language above.</p>
+<p>To receive the certificate, it is essential that you have solved at least two thirds of the “Exploratory Data Analysis” part of the project. For the advanced participants, the entire “Price Prediction – The Application of Statistical Models” part is added. In addition, two thirds of the respective curriculum on DataCamp must be completed. You can find more detailed information on this in the “Curriculum” section of the respective programming language above.</p>
 
-<div style="page-break-after: always;"></div>
 </div>
 </div>
 </div>
@@ -349,20 +352,6 @@ gitbook.start({
 });
 </script>
 
-<!-- dynamically load mathjax for compatibility with self-contained -->
-<script>
-  (function () {
-    var script = document.createElement("script");
-    script.type = "text/javascript";
-    var src = "true";
-    if (src === "" || src === "true") src = "https://mathjax.rstudio.com/latest/MathJax.js?config=TeX-MML-AM_CHTML";
-    if (location.protocol !== "file:")
-      if (/^https?:/.test(src))
-        src = src.replace(/^https?:/, '');
-    script.src = src;
-    document.getElementsByTagName("head")[0].appendChild(script);
-  })();
-</script>
 </body>
 
 </html>
