--- a/excercise-checklist.html
+++ b/excercise-checklist.html
@@ -141,7 +141,7 @@
 <div id="excercise-checklist" class="section level1">
 <h1><span class="header-section-number">6</span> Excercise Checklist</h1>
 <p>This checklist should help you keeping track of your exercises. Remember that you have to hand in satisfactory solutions to at least two thirds of the exercises. If you’re part of the beginner track this refers to two thirds of part A (EDA) only. If you’re part of the advanced track, you have to hand in at least two thirds of both individual parts A and B. Hence, you cannot hand in 100 percent of the first part and only 50 percent of the second one. You’ll need more than 66% in each one for a certificate. After all, you’re not really that advanced if you only did half of it, right?</p>
-<p><strong>Part A: Exploratory Data Analysis (Beginner + Advanced)</strong></p>
+<p><strong>Part A: Exploratory Data Analysis (Beginners + Advanced)</strong></p>
 <ol style="list-style-type: decimal">
 <li><p>Visualize the available apartments (calendar dataset):</p>
 <ol style="list-style-type: lower-alpha">
@@ -169,11 +169,7 @@
 <li><p>Draw a 2D-density plot</p></li>
 </ol></li>
 </ol>
-<p>&lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD
-<strong>Part B: price prediction using statistical methods (advanced and motivated beginners)</strong>
-=======
-** Part B: Price Prediction Using Statistical Methods (Advanced + Motivated Beginners)
-&gt;&gt;&gt;&gt;&gt;&gt;&gt; a67f418d45a6224bb1aa661adba74749082bef5a</p>
+<p><strong>Part B: Price Prediction Using Statistical Methods ((motivated) Beginners + Advanced)</strong></p>
 <ol style="list-style-type: decimal">
 <li><p>Visualize feature correlations in a correlation matrix/heatmap</p></li>
 <li><p>Regression</p>
